# oh_my_stars

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  config.py  main.py  pyproject.toml  repomix.config.json5
.claude/: settings.json
backlog/: config.yml
backlog/completed/: 001-extract-starred-labeled-places.md  002-extract-saved-places-timestamps.md  003-extract-photo-geolocation-data.md  004-correlate-photos-to-regions.md  005-extract-review-timestamps.md  006-generate-visit-timeline.md  007-generate-summary-report.md  008-implement-geocoding-cache.md  009-create-main-script.md  010-data-validation-testing.md  011-create-constants-module.md
backlog/docs/: project-overview.md
backlog/tasks/: 001-extract-starred-labeled-places.md  002-extract-saved-places-timestamps.md  003-extract-photo-geolocation-data.md  004-correlate-photos-to-regions.md  005-extract-review-timestamps.md  006-generate-visit-timeline.md  007-generate-summary-report.md  008-implement-geocoding-cache.md  009-create-main-script.md  010-data-validation-testing.md  012-implement-release-please-ci-in-github-actions.md  013-create-core-module-structure-for-oh-my-stars.md  014-extract-takeoutextractor-class-to-core-takeout.py.md  015-extract-geocodingcache-to-utils-geocoding.py.md  016-extract-place-extraction-classes-to-core-places.py.md  018-extract-reviewvisitsextractor-to-core-reviews.py.md  019-extract-timeline-and-report-generators-to-core-reports.py.md  021-extract-datavalidator-to-utils-validation.py.md  022-extract-utility-functions-to-utils-helpers.py.md  024-add-type-hints-and-docstrings-to-all-modules.md  025-create-integration-tests-for-modular-structure.md  026-update-project-documentation-for-modular-structure.md  task-002 - Create-core-module-structure-for-oh_my_stars.md  (+18 more)
core/: takeout.py
scripts/: README.md  fetch_ratings.py
test_data/: labeled_places.json  reviews.json  saved_places.json
test_output/: validation_report.md
tests/: fixtures.py  test_extractors.py  test_geocoding_cache.py  test_pipeline.py  test_validator.py
utils/: geocoding.py
