[project]
name = "oh-my-stars"
version = "0.1.0"
authors = [
    { name = "pythoninthegrass", email = "4097471+pythoninthegrass@users.noreply.github.com" }
]

requires-python = ">=3.12"

dependencies = [
    "geopy>=2.4.1",
    "python-decouple>=3.8",
    "sh>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
